Pembuatan Runtime Configuration dan menghubungkan class laporan ke Configuration

--- a/AplikasiInventarisToko.csproj
+++ b/AplikasiInventarisToko.csproj
@@ -11,4 +11,10 @@
     <Folder Include="API\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
