--- a/Application/appsettings.json
+++ b/Application/appsettings.json
@@ -1,6 +1,6 @@
 {
     "CurrencySetting": {
-        "Current": "IDR",
+        "Current": "USD",
         "Options": {
             "IDR": {
                 "Symbol": "Rp",
