--- a/GUI/GUI.csproj
+++ b/GUI/GUI.csproj
@@ -8,4 +8,10 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\API\API.csproj" />
+    <ProjectReference Include="..\Application\AplikasiInventarisToko.csproj" />
+    <ProjectReference Include="..\UniTesting\UniTesting.csproj" />
+  </ItemGroup>
+
 </Project>
